syntax = "proto3";
package pb;
// protoc --go_out=./ --go-grpc_out=./ account.proto to create go files
option go_package = "./pb";
import "google/protobuf/empty.proto";
message Account {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string userType = 5;
}

message SignUpRequest {
  string name = 1;
  string Password = 2;
  string email  = 3;
  string phone = 4;
  string userType = 5;
}

message SignUpResponse {
  Account account = 1;
  string message = 2;
}

message GetAccountsRequest {
  uint64 skip = 1;
  uint64 take = 2;
}

message GetAccountsResponse {
  repeated Account accounts = 1;
}

message LoginRequest {
  oneof contact_method {
    string email = 1;
    string phone = 2;
  }
  string password = 3;
}

message LoginResponse {
  Account account = 1;
  string JWT_Token = 2;
  string Refresh_Token = 3;
}

message AccountResponse {
  Account account = 1;
}

message Address {
  string AddressId = 1;
  string userId = 2;
  bool isDefault = 3;
  string Street = 4;
  string ApartmentUnit = 5;
  string City = 6;
  string State = 7;
  string Country = 8;
  string ZipCode = 9;
  string CreatedAt = 10;
  string Name = 11;
  string Phone = 12;
}

message AddAddressRequest {
  string Phone = 1;
  bool isDefault = 2;
  string Street = 3;
  string ApartmentUnit = 4;
  string City = 5;
  string State = 6;
  string Country = 7;
  string ZipCode = 8;
  string Name = 9;
}
message GetAddressRequest {
  string AddressId = 1;
}

message DeleteAddressRequest {
  string AddressId = 1;
}

message Addresses {
  repeated Address addresses = 1;
}

service AccountService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc GetAccount(google.protobuf.Empty) returns (AccountResponse) {}
  rpc GetAccounts(GetAccountsRequest) returns (GetAccountsResponse) {}
  rpc Authentication(google.protobuf.Empty) returns (AccountResponse) {}

  rpc AddAddress(AddAddressRequest) returns (Address) {}
  rpc GetAddresses(google.protobuf.Empty) returns (Addresses) {}
  rpc GetAddress(GetAddressRequest) returns (Address) {}
  rpc DeleteAddress(DeleteAddressRequest) returns (google.protobuf.Empty) {}
}